# LessCPP

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.69e6840  CMakeLists.txt.user.e64b8c5  LICENSE  Makefile  README.md  block_shape.cc  block_shape.h  block_shape.hh  compile_commands.json  const_globals.h  globals.h  helpers.cc  helpers.cpp  helpers.h  less.cc  makefile  player.cc  player.cpp  player.h  wall.cc  wall.h  wall.hh
contexts/include/contexts/: context.h  dialog_context.h  game_context.h  game_menu_context.h  join_dialog_context.h  main_menu_context.h  server_room_context.h  sub_menu_context.h
contexts/src/: context.cc  dialog_context.cc  game_context.cc  game_menu_context.cc  join_dialog_context.cc  main_menu_context.cc  server_room_context.cc  sub_menu_context.cc
include/: ai.h  block.h  block_shape.h  const_globals.h  context.h  definition_globals.h  field.h  game.h  game_context.h  gui.h  helpers.h  join_dialog_context.h  less.h  location.h  main_menu_context.h  menu.h  menu_button.h  menu_context.h  menu_defines.h  menu_text_input.h  piece.h  player.h  sub_menu_context.h  wall.h
libs/: CMakeLists.txt
libs/SFMLWidgets/: CMakeLists.txt
libs/SFMLWidgets/include/SFMLWidgets/: button.h  settings.h  text_input.h
libs/SFMLWidgets/src/: button.cc  text_input.cc
libs/osdialog/: CMakeLists.txt  osdialog_win.c
scripts/: create_new_context.sh
server/: server.cc
server/include/server/: game_room.h
server/src/: game_room.cc  server.cc
src/: ai.cc  block.cc  block_shape.cc  field.cc  game.cc  game_context.cc  game_context.cc.rej  gui.cc  helpers.cc  join_dialog_context.cc  less.cc  less.cc.autosave  location.cc  main.cc  main_menu_context.cc  menu.cc  menu_button.cc  menu_context.cc  menu_text_input.cc  piece.cc  player.cc  sub_menu_context.cc  wall.cc
