cmake_minimum_required(VERSION 3.12)
project(OsDialog C)

add_library(osdialog osdialog.c osdialog_win.c)

if(UNIX)
	set(OD_SOURCE "osdialog_gtk3.c")
	find_library(PkgConfig REQUIRED)
	pkg_check_modules(GTK REQUIRED gtk+-3.0)
	target_include_directories(${GTK_INCLUDE_DIRS})
	link_directories(${GTK_LIBRARY_DIRS})
	add_definitions(${GTK_CFLAGS_OTHER})
	target_link_libraries(osdialog ${GTK_LIBRARIES})
elseif(WIN32)
	set(OD_SOURCE "osdialog_win.c")
	target_link_libraries(osdialog comdlg32)
else()
	massage(FATAL_ERROR "Operating system is unsupported")
endif()

#set(CMAKE_REQUIRED_LIBRARIES legacy_stdio_definitions.lib)